# true-random

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
src/truerandom/: __init__.py  __main__.py  truerandom.py  utils.py
src/truerandom/tests/: test_unit.py
