[metadata]
name = true-random
version = 1.1.9
author = Pierre-Emmanuel Brian
author_email = peb8@outlook.fr
description = A quantum alternative for standard Python random package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peb-8/true-random
project_urls =
    Bug Tracker = https://github.com/peb-8/true-random/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    quantumrandom == 1.9.0

[options.packages.find]
where = src